--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "file-hosting",
   "version": "0.0.0-DEV",
   "description": "A simple file hosting service",
+  "private": false,
   "keywords": [
     "file",
     "host",
